GladiusUnity2021/ModelImporter/Assets/Scripts/ANTLRgenerated/GladiusItemParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.9.2
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from GladiusItem.g4 by ANTLR 4.9.2

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.9.2")]
[System.CLSCompliant(false)]
public partial class GladiusItemParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		WS=18, INT=19, FLOAT=20, COMMA=21, UNDERSCORE=22, DASH=23, STRING=24, 
		SINGLELINE_COMMENT=25;
	public const int
		RULE_root = 0, RULE_numEntries = 1, RULE_item = 2, RULE_itemCreate = 3, 
		RULE_itemDescriptionId = 4, RULE_itemDisplayNameId = 5, RULE_itemCost = 6, 
		RULE_itemMinLevel = 7, RULE_itemRarity = 8, RULE_itemRegion = 9, RULE_itemHideSet = 10, 
		RULE_itemShowSet = 11, RULE_itemMesh = 12, RULE_itemMaterial = 13, RULE_itemSkill = 14, 
		RULE_itemAffinity = 15, RULE_itemStatMod = 16, RULE_itemAttribute = 17;
	public static readonly string[] ruleNames = {
		"root", "numEntries", "item", "itemCreate", "itemDescriptionId", "itemDisplayNameId", 
		"itemCost", "itemMinLevel", "itemRarity", "itemRegion", "itemHideSet", 
		"itemShowSet", "itemMesh", "itemMaterial", "itemSkill", "itemAffinity", 
		"itemStatMod", "itemAttribute"
	};

	private static readonly string[] _LiteralNames = {
		null, "'NUMENTRIES:'", "'ITEMCREATE:'", "'.ITEMDESCRIPTIONID:'", "'.ITEMDISPLAYNAMEID:'", 
		"'.ITEMCOST:'", "'.ITEMMINLEVEL:'", "'.ITEMRARITY:'", "'.ITEMREGION:'", 
		"'.ITEMHIDESET:'", "'.ITEMSHOWSET:'", "'.ITEMMESH:'", "'.ITEMMESH2:'", 
		"'.ITEMMATERIAL:'", "'.ITEMSKILL:'", "'.ITEMAFFINITY:'", "'.ITEMSTATMOD:'", 
		"'.ITEMATTRIBUTE:'", null, null, null, "','", "'_'", "'-'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, "WS", "INT", "FLOAT", "COMMA", "UNDERSCORE", 
		"DASH", "STRING", "SINGLELINE_COMMENT"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "GladiusItem.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static GladiusItemParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public GladiusItemParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public GladiusItemParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class RootContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public NumEntriesContext numEntries() {
			return GetRuleContext<NumEntriesContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ItemContext[] item() {
			return GetRuleContexts<ItemContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ItemContext item(int i) {
			return GetRuleContext<ItemContext>(i);
		}
		public RootContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_root; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IGladiusItemListener typedListener = listener as IGladiusItemListener;
			if (typedListener != null) typedListener.EnterRoot(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IGladiusItemListener typedListener = listener as IGladiusItemListener;
			if (typedListener != null) typedListener.ExitRoot(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGladiusItemVisitor<TResult> typedVisitor = visitor as IGladiusItemVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitRoot(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public RootContext root() {
		RootContext _localctx = new RootContext(Context, State);
		EnterRule(_localctx, 0, RULE_root);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 36;
			numEntries();
			State = 38;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				{
				State = 37;
				item();
				}
				}
				State = 40;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( _la==T__1 );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class NumEntriesContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode INT() { return GetToken(GladiusItemParser.INT, 0); }
		public NumEntriesContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_numEntries; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IGladiusItemListener typedListener = listener as IGladiusItemListener;
			if (typedListener != null) typedListener.EnterNumEntries(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IGladiusItemListener typedListener = listener as IGladiusItemListener;
			if (typedListener != null) typedListener.ExitNumEntries(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGladiusItemVisitor<TResult> typedVisitor = visitor as IGladiusItemVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitNumEntries(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public NumEntriesContext numEntries() {
		NumEntriesContext _localctx = new NumEntriesContext(Context, State);
		EnterRule(_localctx, 2, RULE_numEntries);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 42;
			Match(T__0);
			State = 43;
			Match(INT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ItemContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ItemCreateContext itemCreate() {
			return GetRuleContext<ItemCreateContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ItemCostContext itemCost() {
			return GetRuleContext<ItemCostContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ItemMinLevelContext itemMinLevel() {
			return GetRuleContext<ItemMinLevelContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ItemRarityContext itemRarity() {
			return GetRuleContext<ItemRarityContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ItemDescriptionIdContext itemDescriptionId() {
			return GetRuleContext<ItemDescriptionIdContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ItemDisplayNameIdContext itemDisplayNameId() {
			return GetRuleContext<ItemDisplayNameIdContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ItemAttributeContext[] itemAttribute() {
			return GetRuleContexts<ItemAttributeContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ItemAttributeContext itemAttribute(int i) {
			return GetRuleContext<ItemAttributeContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ItemRegionContext[] itemRegion() {
			return GetRuleContexts<ItemRegionContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ItemRegionContext itemRegion(int i) {
			return GetRuleContext<ItemRegionContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ItemMeshContext[] itemMesh() {
			return GetRuleContexts<ItemMeshContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ItemMeshContext itemMesh(int i) {
			return GetRuleContext<ItemMeshContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ItemMaterialContext itemMaterial() {
			return GetRuleContext<ItemMaterialContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ItemHideSetContext[] itemHideSet() {
			return GetRuleContexts<ItemHideSetContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ItemHideSetContext itemHideSet(int i) {
			return GetRuleContext<ItemHideSetContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ItemShowSetContext[] itemShowSet() {
			return GetRuleContexts<ItemShowSetContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ItemShowSetContext itemShowSet(int i) {
			return GetRuleContext<ItemShowSetContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ItemAffinityContext itemAffinity() {
			return GetRuleContext<ItemAffinityContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ItemSkillContext[] itemSkill() {
			return GetRuleContexts<ItemSkillContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ItemSkillContext itemSkill(int i) {
			return GetRuleContext<ItemSkillContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ItemStatModContext[] itemStatMod() {
			return GetRuleContexts<ItemStatModContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ItemStatModContext itemStatMod(int i) {
			return GetRuleContext<ItemStatModContext>(i);
		}
		public ItemContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_item; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IGladiusItemListener typedListener = listener as IGladiusItemListener;
			if (typedListener != null) typedListener.EnterItem(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IGladiusItemListener typedListener = listener as IGladiusItemListener;
			if (typedListener != null) typedListener.ExitItem(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGladiusItemVisitor<TResult> typedVisitor = visitor as IGladiusItemVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitItem(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ItemContext item() {
		ItemContext _localctx = new ItemContext(Context, State);
		EnterRule(_localctx, 4, RULE_item);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 45;
			itemCreate();
			State = 47;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==T__2) {
				{
				State = 46;
				itemDescriptionId();
				}
			}

			State = 50;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==T__3) {
				{
				State = 49;
				itemDisplayNameId();
				}
			}

			State = 52;
			itemCost();
			State = 53;
			itemMinLevel();
			State = 54;
			itemRarity();
			State = 58;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==T__16) {
				{
				{
				State = 55;
				itemAttribute();
				}
				}
				State = 60;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 64;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==T__7) {
				{
				{
				State = 61;
				itemRegion();
				}
				}
				State = 66;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 70;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==T__10 || _la==T__11) {
				{
				{
				State = 67;
				itemMesh();
				}
				}
				State = 72;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 74;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==T__12) {
				{
				State = 73;
				itemMaterial();
				}
			}

			State = 79;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==T__8) {
				{
				{
				State = 76;
				itemHideSet();
				}
				}
				State = 81;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 85;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==T__9) {
				{
				{
				State = 82;
				itemShowSet();
				}
				}
				State = 87;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 89;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==T__14) {
				{
				State = 88;
				itemAffinity();
				}
			}

			State = 94;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==T__13) {
				{
				{
				State = 91;
				itemSkill();
				}
				}
				State = 96;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 100;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==T__15) {
				{
				{
				State = 97;
				itemStatMod();
				}
				}
				State = 102;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ItemCreateContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] STRING() { return GetTokens(GladiusItemParser.STRING); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode STRING(int i) {
			return GetToken(GladiusItemParser.STRING, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] COMMA() { return GetTokens(GladiusItemParser.COMMA); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode COMMA(int i) {
			return GetToken(GladiusItemParser.COMMA, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode INT() { return GetToken(GladiusItemParser.INT, 0); }
		public ItemCreateContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_itemCreate; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IGladiusItemListener typedListener = listener as IGladiusItemListener;
			if (typedListener != null) typedListener.EnterItemCreate(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IGladiusItemListener typedListener = listener as IGladiusItemListener;
			if (typedListener != null) typedListener.ExitItemCreate(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGladiusItemVisitor<TResult> typedVisitor = visitor as IGladiusItemVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitItemCreate(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ItemCreateContext itemCreate() {
		ItemCreateContext _localctx = new ItemCreateContext(Context, State);
		EnterRule(_localctx, 6, RULE_itemCreate);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 103;
			Match(T__1);
			State = 104;
			Match(STRING);
			State = 105;
			Match(COMMA);
			State = 106;
			Match(STRING);
			State = 107;
			Match(COMMA);
			State = 108;
			Match(STRING);
			State = 109;
			Match(COMMA);
			State = 110;
			Match(STRING);
			State = 111;
			Match(COMMA);
			State = 112;
			Match(INT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ItemDescriptionIdContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode INT() { return GetToken(GladiusItemParser.INT, 0); }
		public ItemDescriptionIdContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_itemDescriptionId; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IGladiusItemListener typedListener = listener as IGladiusItemListener;
			if (typedListener != null) typedListener.EnterItemDescriptionId(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IGladiusItemListener typedListener = listener as IGladiusItemListener;
			if (typedListener != null) typedListener.ExitItemDescriptionId(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGladiusItemVisitor<TResult> typedVisitor = visitor as IGladiusItemVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitItemDescriptionId(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ItemDescriptionIdContext itemDescriptionId() {
		ItemDescriptionIdContext _localctx = new ItemDescriptionIdContext(Context, State);
		EnterRule(_localctx, 8, RULE_itemDescriptionId);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 114;
			Match(T__2);
			State = 115;
			Match(INT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ItemDisplayNameIdContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode INT() { return GetToken(GladiusItemParser.INT, 0); }
		public ItemDisplayNameIdContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_itemDisplayNameId; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IGladiusItemListener typedListener = listener as IGladiusItemListener;
			if (typedListener != null) typedListener.EnterItemDisplayNameId(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IGladiusItemListener typedListener = listener as IGladiusItemListener;
			if (typedListener != null) typedListener.ExitItemDisplayNameId(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGladiusItemVisitor<TResult> typedVisitor = visitor as IGladiusItemVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitItemDisplayNameId(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ItemDisplayNameIdContext itemDisplayNameId() {
		ItemDisplayNameIdContext _localctx = new ItemDisplayNameIdContext(Context, State);
		EnterRule(_localctx, 10, RULE_itemDisplayNameId);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 117;
			Match(T__3);
			State = 118;
			Match(INT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ItemCostContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode INT() { return GetToken(GladiusItemParser.INT, 0); }
		public ItemCostContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_itemCost; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IGladiusItemListener typedListener = listener as IGladiusItemListener;
			if (typedListener != null) typedListener.EnterItemCost(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IGladiusItemListener typedListener = listener as IGladiusItemListener;
			if (typedListener != null) typedListener.ExitItemCost(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGladiusItemVisitor<TResult> typedVisitor = visitor as IGladiusItemVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitItemCost(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ItemCostContext itemCost() {
		ItemCostContext _localctx = new ItemCostContext(Context, State);
		EnterRule(_localctx, 12, RULE_itemCost);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 120;
			Match(T__4);
			State = 121;
			Match(INT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ItemMinLevelContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode INT() { return GetToken(GladiusItemParser.INT, 0); }
		public ItemMinLevelContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_itemMinLevel; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IGladiusItemListener typedListener = listener as IGladiusItemListener;
			if (typedListener != null) typedListener.EnterItemMinLevel(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IGladiusItemListener typedListener = listener as IGladiusItemListener;
			if (typedListener != null) typedListener.ExitItemMinLevel(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGladiusItemVisitor<TResult> typedVisitor = visitor as IGladiusItemVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitItemMinLevel(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ItemMinLevelContext itemMinLevel() {
		ItemMinLevelContext _localctx = new ItemMinLevelContext(Context, State);
		EnterRule(_localctx, 14, RULE_itemMinLevel);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 123;
			Match(T__5);
			State = 124;
			Match(INT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ItemRarityContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode STRING() { return GetToken(GladiusItemParser.STRING, 0); }
		public ItemRarityContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_itemRarity; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IGladiusItemListener typedListener = listener as IGladiusItemListener;
			if (typedListener != null) typedListener.EnterItemRarity(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IGladiusItemListener typedListener = listener as IGladiusItemListener;
			if (typedListener != null) typedListener.ExitItemRarity(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGladiusItemVisitor<TResult> typedVisitor = visitor as IGladiusItemVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitItemRarity(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ItemRarityContext itemRarity() {
		ItemRarityContext _localctx = new ItemRarityContext(Context, State);
		EnterRule(_localctx, 16, RULE_itemRarity);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 126;
			Match(T__6);
			State = 127;
			Match(STRING);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ItemRegionContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode STRING() { return GetToken(GladiusItemParser.STRING, 0); }
		public ItemRegionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_itemRegion; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IGladiusItemListener typedListener = listener as IGladiusItemListener;
			if (typedListener != null) typedListener.EnterItemRegion(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IGladiusItemListener typedListener = listener as IGladiusItemListener;
			if (typedListener != null) typedListener.ExitItemRegion(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGladiusItemVisitor<TResult> typedVisitor = visitor as IGladiusItemVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitItemRegion(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ItemRegionContext itemRegion() {
		ItemRegionContext _localctx = new ItemRegionContext(Context, State);
		EnterRule(_localctx, 18, RULE_itemRegion);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 129;
			Match(T__7);
			State = 130;
			Match(STRING);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ItemHideSetContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode STRING() { return GetToken(GladiusItemParser.STRING, 0); }
		public ItemHideSetContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_itemHideSet; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IGladiusItemListener typedListener = listener as IGladiusItemListener;
			if (typedListener != null) typedListener.EnterItemHideSet(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IGladiusItemListener typedListener = listener as IGladiusItemListener;
			if (typedListener != null) typedListener.ExitItemHideSet(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGladiusItemVisitor<TResult> typedVisitor = visitor as IGladiusItemVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitItemHideSet(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ItemHideSetContext itemHideSet() {
		ItemHideSetContext _localctx = new ItemHideSetContext(Context, State);
		EnterRule(_localctx, 20, RULE_itemHideSet);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 132;
			Match(T__8);
			State = 133;
			Match(STRING);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
